Fix errant scrolling in sidebar on mobile

--- a/style.css
+++ b/style.css
@@ -194,8 +194,13 @@ div.nice-select {
   float: none;
 }
 
+.nice-select .nice-select-dropdown {
+  display: none;
+}
+
 .nice-select.open .nice-select-dropdown {
   width: 100%;
+  display: block;
 }
 
 div.nice-select, .nice-select.open, .nice-select .option, .nice-select input.nice-select-search, .nice-select .nice-select-dropdown {
